--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,3 +1,4 @@
+@use "./fontweight" as fonts;
 
 $icon-std: 2rem;
 $height-std: 88px;
@@ -6,60 +7,179 @@ $padding-std: 24px;
 $height-min: 68px;
 $padding-min: 16px;
 
-.main{
-    @media (min-width: 2000px) and (orientation: landscape){
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    header{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: $height-std;
-        padding: $padding-std;
-        @media (min-width: 2000px) and (orientation: landscape){
-            width: 2000px;
-        }
-        @media (max-width: 1044px) and (orientation: portrait) {
-            height: $height-min;
-            padding: $padding-min;
-        }
-        img{
-            height: $icon-std;
-        }
-        nav{
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            height: 100%;
-            i{
-                img{
-                    height: $icon-std*.75;
-                    width: $icon-std*.75;
-                }
-            }
-            .switch{
-                margin-left: $icon-std*.375;
+.main {
+	@media (min-width: 2000px) and (orientation: landscape) {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
 
-                i{
-                    img{
-                        height: $icon-std;
-                        width: $icon-std;
-                    }
-                    &:first-child{
-                        img{
-                            height: $icon-std*.8;
-                            width: $icon-std*.8;
-                            margin: $icon-std*.1;
+	header {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		height: $height-std;
+		padding: $padding-std;
 
-                        }
-                    }
-                }
-                &:hover{
-                    cursor: pointer;
-                }
-            }
-        }
-    }
+		@media (min-width: 2000px) and (orientation: landscape) {
+			width: 2000px;
+		}
+
+		@media (max-width: 1044px) and (orientation: portrait) {
+			height: $height-min;
+			padding: $padding-min;
+		}
+
+		img {
+			height: $icon-std;
+
+			&.large {
+				@media (max-width: 500px) {
+					display: none;
+				}
+			}
+
+			&.mobile {
+				@media (min-width: 500px) {
+					display: none;
+				}
+			}
+		}
+
+		nav {
+			display: flex;
+			align-items: center;
+			justify-content: flex-end;
+			height: 100%;
+
+			.buttonLaunch {
+				.btn {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					background: linear-gradient(92deg, #72C4FF -2.99%, #7CA9FF 112.97%);
+					border: 2px solid #005FCC;
+					font-weight: fonts.$font-weight-semibold;
+					color: #FFFFFF;
+					transition: 0.25s;
+					font-size: 18px;
+					border-radius: 10px;
+					width: 180px;
+					height: 40px;
+					box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+					margin-right: 16px;
+
+					&:hover {
+						cursor: pointer;
+						scale: 1.1;
+					}
+				}
+				@media (max-width: 768px) {
+					.claim{
+						display: none;
+					}
+					
+				}
+
+				@media (max-width: 600px) {
+					.btn {
+						font-size: 16px;
+						width: 130px;
+						height: 35px;
+					}
+				}
+			}
+
+			i {
+				img {
+					height: $icon-std*.75;
+					width: $icon-std*.75;
+				}
+			}
+
+			#menu {
+				z-index: 5;
+
+				button {
+					display: flex;
+					flex-direction: column;
+					width: 24px;
+					height: 24px;
+					border: 0;
+					background: transparent;
+					gap: 5px;
+
+					div {
+						background: black;
+						height: 4px;
+						width: 100%;
+						border-radius: 5px;
+						transition: all 0.75s;
+						transform-origin: left;
+					}
+
+					&:hover {
+						cursor: pointer;
+					}
+				}
+
+				button.close {
+					div {
+						height: 2px;
+
+						&:first-child {
+							transform: rotate(45deg);
+							width: 20px;
+						}
+
+						&:nth-child(2) {
+							opacity: 0;
+						}
+
+						&:last-child {
+							transform: rotate(-45deg);
+							width: 20px;
+						}
+					}
+				}
+			}
+
+			.switch {
+				margin-left: $icon-std*.375;
+
+				i {
+					img {
+						height: $icon-std;
+						width: $icon-std;
+					}
+
+					&:first-child {
+						img {
+							height: $icon-std*.8;
+							width: $icon-std*.8;
+							margin: $icon-std*.1;
+
+						}
+					}
+				}
+
+				&:hover {
+					cursor: pointer;
+				}
+			}
+		}
+	}
+}
+
+body.dark {
+	.main {
+		#menu {
+			button {
+				div {
+					background: white;
+				}
+			}
+		}
+	}
+
 }
