--- a/team/sass/style.css
+++ b/team/sass/style.css
@@ -27,15 +27,89 @@
 .main header img {
   height: 2rem;
 }
+@media (max-width: 500px) {
+  .main header img.large {
+    display: none;
+  }
+}
+@media (min-width: 500px) {
+  .main header img.mobile {
+    display: none;
+  }
+}
 .main header nav {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   height: 100%;
 }
+.main header nav .buttonLaunch .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(92deg, #72C4FF -2.99%, #7CA9FF 112.97%);
+  border: 2px solid #005FCC;
+  font-weight: 600;
+  color: #FFFFFF;
+  transition: 0.25s;
+  font-size: 18px;
+  border-radius: 10px;
+  width: 180px;
+  height: 40px;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-right: 16px;
+}
+.main header nav .buttonLaunch .btn:hover {
+  cursor: pointer;
+  scale: 1.1;
+}
+@media (max-width: 600px) {
+  .main header nav .buttonLaunch .btn {
+    font-size: 16px;
+    width: 160px;
+    height: 35px;
+  }
+}
 .main header nav i img {
   height: 1.5rem;
   width: 1.5rem;
+}
+.main header nav #menu {
+  z-index: 5;
+}
+.main header nav #menu button {
+  display: flex;
+  flex-direction: column;
+  width: 24px;
+  height: 24px;
+  border: 0;
+  background: transparent;
+  gap: 5px;
+}
+.main header nav #menu button div {
+  background: black;
+  height: 4px;
+  width: 100%;
+  border-radius: 5px;
+  transition: all 0.75s;
+  transform-origin: left;
+}
+.main header nav #menu button:hover {
+  cursor: pointer;
+}
+.main header nav #menu button.close div {
+  height: 2px;
+}
+.main header nav #menu button.close div:first-child {
+  transform: rotate(45deg);
+  width: 20px;
+}
+.main header nav #menu button.close div:nth-child(2) {
+  opacity: 0;
+}
+.main header nav #menu button.close div:last-child {
+  transform: rotate(-45deg);
+  width: 20px;
 }
 .main header nav .switch {
   margin-left: 0.75rem;
@@ -53,14 +127,18 @@
   cursor: pointer;
 }
 
+body.dark .main #menu button div {
+  background: white;
+}
+
 .menu {
   z-index: 2;
   align-self: baseline;
   background: linear-gradient(253.36deg, #BDE6F7 -18.33%, #C8DED4 100.44%, #C2D9C9 100.44%);
   width: 13rem;
   position: absolute;
-  right: 95px;
-  top: 30px;
+  right: 65px;
+  top: 20px;
   border-radius: 0.4rem;
   transform: translateY(0px);
   transition: 0.3s;
@@ -74,13 +152,13 @@
 }
 @media (min-width: 2000px) and (orientation: landscape) {
   .menu {
-    right: calc((100vw - 2000px) / 2 + 95px);
+    right: calc((100vw - 2000px) / 2 + 65px);
   }
 }
 @media (max-width: 1044px) and (orientation: portrait) {
   .menu {
-    right: 90px;
-    top: 20px;
+    right: 60px;
+    top: 10px;
   }
 }
 .menu ul {
